# TemperatureAnalyzer

./: CMakeLists.txt  CMakeLists.txt.in  README.md
data/: input.csv  output_result.csv  test_input.csv
include/: command_line_processor.h  data_file_generator.h  data_processor.h  experiment.h  file_input.h  result_generator.h  temperature_analyzer.h
src/: command_line_processor.cpp  data_file_generator.cpp  data_processor.cpp  experiment.cpp  file_input.cpp  main.cpp  result_generator.cpp  temperature_analyzer.cpp
tests/: CMakeLists.txt  data_processor_test.cpp  file_input_test.cpp
